--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "js-cookie": "^3.0.5",
     "next": "13.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
