página orden de compra

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
+
 MONGODB_URI=mongodb+srv://nextjs-tailwind-amazonas:OEPrpaDjOZcUymYw@ecommerce.cnw5fme.mongodb.net/amazonas?retryWrites=true&w=majority
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=somethingsecret
